# small_type_id

./: .gitignore  Cargo.toml  ChangeLog.md  LICENSE-APACHE  LICENSE-MIT  ReadMe.md
.github/: musl_dockerfile
.github/workflows/: ci.yml
benches/: Cargo.toml  hex_conversion.rs
check_every_u32_hex/: Cargo.toml  check_every_u32_hex.rs
check_every_u32_hex/src/: main.rs
extra_tests/: Cargo.toml  cmp_output.py  duplicate_type_ids_handling.rs
extra_tests/etalons/: auto_no_names.txt  auto_with_names.txt  m_stderr.txt  m_stdout_no_names.txt  m_stdout_with_names.txt
short_type_id/: Cargo.toml
short_type_id/src/: hex.rs  implementation.rs  lib.rs
short_type_id/tests/: basic.rs
short_type_id_derive/: Cargo.toml
short_type_id_derive/src/: lib.rs
small_type_id/: Cargo.toml
small_type_id/src/: implementation.rs  lib.rs  macros.rs  skip_list.rs  unix.rs  win.rs
small_type_id/tests/: basic.rs  type_id.rs
small_type_id_derive/: Cargo.toml
small_type_id_derive/src/: lib.rs
small_type_id_proc_macro/: Cargo.toml
small_type_id_proc_macro/src/: lib.rs
