[package]
name = "extra_tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
short_type_id = { path = "../short_type_id" }

[features]
unsafe_remove_duplicate_checks = ["short_type_id/unsafe_remove_duplicate_checks"]
debug_type_name =  ["short_type_id/debug_type_name"]

[[bin]]
name = "duplicate_type_ids_handling"
path = "duplicate_type_ids_handling.rs"
