[package]
name = "extra_tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
small_type_id = { path = "../small_type_id" }

[features]
unsafe_remove_duplicate_checks = ["small_type_id/unsafe_remove_duplicate_checks"]
debug_type_name =  ["small_type_id/debug_type_name"]

[[bin]]
name = "duplicate_type_ids_handling"
path = "duplicate_type_ids_handling.rs"
