[package]
name = "small_type_id"
version = "0.1.0"
edition = "2024"
authors = ["Angelicos Phosphoros (Timur Khuzin) <angelicos.phosphoros@protonmail.com>"]
description = "Crate for generation constant 32 bit nonzero unique identifiers for types."
keywords = ["typeid", "no_std", "const"]
repository = "https://github.com/AngelicosPhosphoros/small_type_id"
license = "MIT OR Apache-2.0"
rust-version = "1.87"

[features]
debug_type_name = []
unsafe_remove_duplicate_checks = []
default = []

[dependencies]
ctor = { version = "0.4.2", default-features = false }
small_type_id_derive = { path = "../small_type_id_derive", "version" = "0.1.0" }
