[package]
name = "small_type_id"
version = "0.0.1-alpha"
edition = "2024"
authors = ["Angelicos Phosphoros (Timur Khuzin) <angelicos.phosphoros@protonmail.com>"]
description = "Crate for generation constant 32 bit nonzero unique identifiers for types."
keywords = ["typeid", "no_std", "const"]
repository = "https://github.com/AngelicosPhosphoros/small_type_id"
license = "MIT OR Apache-2.0"
readme = "../ReadMe.md"
rust-version = "1.87"

[features]
# See crate core documentation page for help.
debug_type_name = []
unsafe_remove_duplicate_checks = []
default = []

[dependencies]
ctor = { version = "0.4.2", default-features = false }
small_type_id_proc_macro = { path = "../small_type_id_proc_macro", "version" = "0.0.1-alpha" }
xxhash-rust = { version = "0.8.15", default-features = false, features = ["const_xxh32"] }
